2008-04-10  Jason Rumney  <jasonr@gnu.org>

	* w32menu.c (is_simple_dialog, simple_dialog_show): New functions.
	(Fx_popup_dialog): Handle simple yes/no questions as dialogs.

	* w32.c (logon_network_drive): Also logon to remote drives that
	are mapped to drive letters.

2008-04-10  Glenn Morris  <rgm@gnu.org>

	* xdisp.c (truncate-partial-width-windows): Doc fix.

2008-04-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* fileio.c (read_file_name_cleanup, Fread_file_name_internal):
	Move functions to minibuffer.el.
	(syms_of_fileio): Don't declare them.

2008-04-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuf.c (Vcompletion_auto_help): Move to minibuffer.el.
	(syms_of_minibuf): Remove its initialization.

	* minibuf.c (temp_echo_area_glyphs): Remove unused function.

2008-04-09  Juanma Barranquero  <lekktu@gmail.com>

	* editfns.c (Ffield_string_no_properties): Fix typo in docstring.

2008-04-09  Jason Rumney  <jasonr@gnu.org>

	* makefile.w32-in (distclean): Delete makefile too.
	(maintainer-clean): New target.

	* xdisp.c (redisplay_internal) [!WINDOWSNT]: Conditionalize last change.

	* w32term.c (w32_compute_glyph_string_overhangs): Compute overhangs
	for new font backend and composite cases.

2008-04-09  Jan Djärv  <jan.h.d@swipnet.se>

	* atimer.c (alarm_signal_handler): Call run_timers if not SYNC_INPUT.
	Most of the code moved to run_timers.
	(do_pending_atimers): Call run_timers.
	(run_timers): New function.

	* sysdep.c (emacs_write): If SYNC_INPUT and pending_atimers,
	run atimers.

	* process.c (wait_reading_process_output): The same as above.

2008-04-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuf.c (last_exact_completion): Remove variable.
	(Fdelete_minibuffer_contents, do_completion, Fminibuffer_complete)
	(complete_and_exit_1, complete_and_exit_2)
	(Fminibuffer_complete_and_exit, Fminibuffer_complete_word)
	(Fdisplay_completion_list, display_completion_list_1)
	(Fminibuffer_completion_help, Fself_insert_and_exit)